samples/_failures_safe/1761153637_19e5aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_332413cc.c: In function ‘main’:
./samples/SAFE/__tmp_332413cc.c:156:9: error: expected declaration or statement at end of input
  156 |         }
      |         ^
./samples/SAFE/__tmp_332413cc.c:156:9: error: expected declaration or statement at end of input
